--- a/package.json
+++ b/package.json
@@ -5,33 +5,34 @@
     "main": "server/index.js",
     "type": "module",
     "scripts": {
-      "clean": "rm public/*.map public/main.js public/main.css",
-      "client:dev": "esbuild --watch --bundle --sourcemap --target=es6 --outdir=public client/main.jsx",
-      "client": "esbuild --bundle --minify --target=es6 --outdir=public client/main.jsx",
-      "server:dev": "nodemon --watch server/**/* server/server.js dev",
-      "server": "node server/index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "clean": "rm public/*.map public/main.js public/main.css",
+        "client:dev": "esbuild --watch --bundle --sourcemap --target=es6 --outdir=public client/main.jsx",
+        "client": "esbuild --bundle --minify --target=es6 --outdir=public client/main.jsx",
+        "server:dev": "nodemon --watch server/**/* server/server.js dev",
+        "server": "node server/index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Matthew Thomas",
     "license": "MIT",
     "devDependencies": {
-      "bootstrap": "^5.2.3",
-      "esbuild": "^0.17.12",
-      "eslint": "^8.36.0",
-      "eslint-config-standard": "^17.0.0",
-      "eslint-plugin-import": "^2.27.5",
-      "eslint-plugin-n": "^15.6.1",
-      "eslint-plugin-promise": "^6.1.1",
-      "eslint-plugin-react": "^7.32.2",
-      "eslint-plugin-react-hooks": "^4.6.0",
-      "nodemon": "^2.0.21"
+        "bootstrap": "^5.2.3",
+        "esbuild": "^0.17.12",
+        "eslint": "^8.36.0",
+        "eslint-config-standard": "^17.0.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-n": "^15.6.1",
+        "eslint-plugin-promise": "^6.1.1",
+        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react-hooks": "^4.6.0",
+        "nodemon": "^2.0.21"
     },
     "dependencies": {
-      "bootstrap-icons": "^1.10.3",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "mongodb": "^5.2.0",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0"
+        "bootstrap-icons": "^1.10.3",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "mongodb": "^5.2.0",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-dropzone": "^14.2.3"
     }
-  }
+}
