--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "nodemon": "^2.0.21"
     },
     "dependencies": {
+        "@emailjs/browser": "^3.11.0",
         "bootstrap-icons": "^1.10.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
