--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "server/index.js",
     "type": "module",
     "scripts": {
+        "start:dev": "concurrently --kill-others \"npm run client:dev\" \"npm run server:dev\"",
         "clean": "rm public/*.map public/main.js public/main.css",
         "client:dev": "esbuild --watch --bundle --sourcemap --target=es6 --outdir=public client/main.jsx",
         "client": "esbuild --bundle --minify --target=es6 --outdir=public client/main.jsx",
@@ -16,6 +17,7 @@
     "license": "MIT",
     "devDependencies": {
         "bootstrap": "^5.2.3",
+        "concurrently": "^8.2.2",
         "esbuild": "^0.17.12",
         "eslint": "^8.36.0",
         "eslint-config-standard": "^17.0.0",
