--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "client:dev": "esbuild --watch --bundle --sourcemap --target=es6 --outdir=public client/main.jsx",
         "client": "esbuild --bundle --minify --target=es6 --outdir=public client/main.jsx",
         "server:dev": "nodemon --watch server/**/* server/server.js dev",
-        "server": "node server/index.js",
+        "server": "node server/server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Matthew Thomas",
@@ -26,11 +26,12 @@
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "nodemon": "^2.0.21"
+        "nodemon": "^2.0.21",
+        "react-router-dom": "^6.18.0"
     },
     "dependencies": {
-        "bootstrap": "^5.3.2",
         "@emailjs/browser": "^3.11.0",
+        "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.10.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
