--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "start:dev": "concurrently --kill-others \"npm run client:dev\" \"npm run server:dev\"",
         "clean": "rm public/*.map public/main.js public/main.css",
-        "client:dev": "esbuild --watch --bundle --sourcemap --target=es6 --outdir=public client/main.jsx",
+        "client:dev": "esbuild --watch --bundle --loader:.jpg=dataurl --sourcemap --target=es6 --outdir=public client/main.jsx",
         "client": "esbuild --bundle --minify --target=es6 --outdir=public client/main.jsx",
         "server:dev": "nodemon --watch server/**/* server/server.js dev",
         "server": "node server/server.js",
