--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "author": "Matthew Thomas",
     "license": "MIT",
     "devDependencies": {
-        "bootstrap": "^5.2.3",
-        "concurrently": "^8.2.2",
+
         "esbuild": "^0.17.12",
         "eslint": "^8.36.0",
         "eslint-config-standard": "^17.0.0",
@@ -26,18 +25,19 @@
         "eslint-plugin-promise": "^6.1.1",
         "eslint-plugin-react": "^7.32.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "nodemon": "^2.0.21",
-        "react-router-dom": "^6.18.0"
+        "nodemon": "^2.0.21"
     },
-    "dependencies": {
-        "@emailjs/browser": "^3.11.0",
+      "dependencies": {
+        "concurrently": "^8.2.2",
         "bootstrap": "^5.3.2",
+        "@emailjs/browser": "^3.11.0",
         "bootstrap-icons": "^1.10.3",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongodb": "^5.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.18.0",
         "react-dropzone": "^14.2.3"
     }
 }
