--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "author": "Matthew Thomas",
     "license": "MIT",
     "devDependencies": {
-
         "esbuild": "^0.17.12",
         "eslint": "^8.36.0",
         "eslint-config-standard": "^17.0.0",
@@ -27,17 +26,18 @@
         "eslint-plugin-react-hooks": "^4.6.0",
         "nodemon": "^2.0.21"
     },
-      "dependencies": {
-        "concurrently": "^8.2.2",
-        "bootstrap": "^5.3.2",
+    "dependencies": {
         "@emailjs/browser": "^3.11.0",
+        "bcryptjs": "^2.4.3",
+        "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.10.3",
+        "concurrently": "^8.2.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongodb": "^5.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.18.0",
-        "react-dropzone": "^14.2.3"
+        "react-dropzone": "^14.2.3",
+        "react-router-dom": "^6.18.0"
     }
 }
