--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "concurrently": "^8.2.2",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "gh-pages": "^6.1.0",
         "mongodb": "^5.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
