--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.10.3",
         "concurrently": "^8.2.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongodb": "^5.9.0",
