--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+    "homepage": "https://maxwellwichern.github.io/",
     "name": "Steganography",
     "version": "0.1.0",
     "description": "Capstone project",
@@ -7,19 +8,20 @@
     "scripts": {
         "start:dev": "concurrently --kill-others \"npm run client:dev\" \"npm run server:dev\"",
         "start": "concurrently --kill-others \"npm run client\" \"npm run server\"",
-        "clean": "rm public/*.map public/main.js public/main.css",
+        "clean": "rm -f public/*.map public/main.js public/main.css",
         "client:dev": "esbuild --watch --bundle --loader:.jpg=dataurl --sourcemap --target=es6 --outdir=public client/main.jsx",
         "client": "esbuild --bundle --minify --loader:.jpg=dataurl --target=es6 --outdir=public client/main.jsx",
         "server:dev": "nodemon --watch server/**/* server/server.js dev",
         "server": "node server/server.js",
+        "deploy": "npm run build && amplify publish",
+        "predeploy": "npm run clean",
         "build:client": "esbuild --bundle --minify --loader:.jpg=dataurl --target=es6 --outdir=public client/main.jsx",
-        "build": "npm run clean && npm run build:client",
-        "start:prod": "node server/server.js",
-        "prestart:prod": "npm run build"
+        "build": "npm run clean && npm run build:client"
     },
     "author": "Matthew Thomas",
     "license": "MIT",
     "devDependencies": {
+        "esbuild": "^0.17.12",
         "eslint": "^8.36.0",
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-import": "^2.27.5",
@@ -35,10 +37,9 @@
         "bootstrap": "^5.3.2",
         "bootstrap-icons": "^1.10.3",
         "concurrently": "^8.2.2",
+        "cors": "^2.8.5",
         "dotenv": "^16.3.1",
-        "esbuild": "^0.19.8",
         "express": "^4.18.2",
-        "gh-pages": "^6.1.0",
         "mongodb": "^5.9.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
